--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "write-good": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
