--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.2",
     "airtable": "^0.5.6",
     "classnames": "^2.2.6",
+    "file-saver": "^2.0.0-rc.3",
     "history": "^4.7.2",
     "javascript-time-ago": "^1.0.31",
     "lodash-es": "^4.17.10",
